dwd层数据导入

--- a/datahouse_edcation/src/main/resources/log4j.properties
+++ b/datahouse_edcation/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Define some default values that can be overridden by system properties
-zookeeper.root.logger=WARN, CONSOLE
-zookeeper.console.threshold=WARN
+zookeeper.root.logger=ERROR, CONSOLE
+zookeeper.console.threshold=ERROR
 zookeeper.log.dir=.
 zookeeper.log.file=zookeeper.log
 zookeeper.log.threshold=DEBUG
