--- a/datahouse_edcation/pom.xml
+++ b/datahouse_edcation/pom.xml
@@ -13,27 +13,31 @@
 
 
     <dependencies>
-
+        <!-- Spark的依赖引入 -->
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
-            <version>2.1.1</version>
+            <version>${spark.version}</version>
+            <!--   限定jar包作用域   -->
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
-            <version>2.1.1</version>
+            <version>${spark.version}</version>
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_2.11</artifactId>
-            <version>2.1.1</version>
+            <version>${spark.version}</version>
+<!--            <scope>provided</scope>-->
         </dependency>
-
+        <!-- 引入Scala -->
         <dependency>
-            <groupId>org.apache.hive</groupId>
-            <artifactId>hive-exec</artifactId>
-            <version>1.2.1</version>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+<!--            <scope>provided</scope>-->
         </dependency>
 
         <dependency>
@@ -42,34 +46,112 @@
             <version>1.2.47</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.46</version>
         </dependency>
-
     </dependencies>
 
     <build>
         <plugins>
-            <!-- 该插件用于将Scala代码编译成class文件 -->
             <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.2</version>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>2.15.1</version>
                 <executions>
                     <execution>
-                        <!-- 声明绑定到maven的compile阶段 -->
+                        <id>compile-scala</id>
                         <goals>
+                            <goal>add-source</goal>
                             <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-compile-scala</id>
+                        <goals>
+                            <goal>add-source</goal>
                             <goal>testCompile</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
-
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+
+    <!--    <dependencies>-->
+
+    <!--        <dependency>-->
+    <!--            <groupId>org.apache.spark</groupId>-->
+    <!--            <artifactId>spark-core_2.11</artifactId>-->
+    <!--            <version>2.1.1</version>-->
+    <!--        </dependency>-->
+    <!--        <dependency>-->
+    <!--            <groupId>org.apache.spark</groupId>-->
+    <!--            <artifactId>spark-sql_2.11</artifactId>-->
+    <!--            <version>2.1.1</version>-->
+    <!--        </dependency>-->
+    <!--        <dependency>-->
+    <!--            <groupId>org.apache.spark</groupId>-->
+    <!--            <artifactId>spark-hive_2.11</artifactId>-->
+    <!--            <version>2.1.1</version>-->
+    <!--        </dependency>-->
+
+    <!--        <dependency>-->
+    <!--            <groupId>org.apache.hive</groupId>-->
+    <!--            <artifactId>hive-exec</artifactId>-->
+    <!--            <version>1.2.1</version>-->
+    <!--        </dependency>-->
+
+    <!--        <dependency>-->
+    <!--            <groupId>com.alibaba</groupId>-->
+    <!--            <artifactId>fastjson</artifactId>-->
+    <!--            <version>1.2.47</version>-->
+    <!--        </dependency>-->
+
+    <!--        <dependency>-->
+    <!--            <groupId>mysql</groupId>-->
+    <!--            <artifactId>mysql-connector-java</artifactId>-->
+    <!--            <version>5.1.46</version>-->
+    <!--        </dependency>-->
+
+    <!--    </dependencies>-->
+
+    <!--    <build>-->
+    <!--        <plugins>-->
+    <!--            &lt;!&ndash; 该插件用于将Scala代码编译成class文件 &ndash;&gt;-->
+    <!--            <plugin>-->
+    <!--                <groupId>net.alchim31.maven</groupId>-->
+    <!--                <artifactId>scala-maven-plugin</artifactId>-->
+    <!--                <version>3.2.2</version>-->
+    <!--                <executions>-->
+    <!--                    <execution>-->
+    <!--                        &lt;!&ndash; 声明绑定到maven的compile阶段 &ndash;&gt;-->
+    <!--                        <goals>-->
+    <!--                            <goal>compile</goal>-->
+    <!--                            <goal>testCompile</goal>-->
+    <!--                        </goals>-->
+    <!--                    </execution>-->
+    <!--                </executions>-->
+    <!--            </plugin>-->
+
+
+    <!--        </plugins>-->
+    <!--    </build>-->
 
 </project>
